<resources>
    <string name="app_name">SuperMegaApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello!</string>
    <string name="checkBoxName">Разрешить</string>
    <string name="buttonClear">Очистить</string>
    <string name="buttonSend">Отправить</string>
    <string name="editText">Введите электронную почту</string>
    <string name="hint">Введите email адрес </string>
    <string name="textViewSeconActivity"> Текст с первого интента</string>
    <string name="buttonApprove"> Подтвердить</string>
    <string name="buttonReject">Отклонить </string>

</resources>
