<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.denfox.supermegaapp.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textColorHint="@color/colorAccent"

        android:inputType="textEmailAddress"
        android:shadowColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        android:layout_margin="12dp"/>

    <CheckBox
        android:id="@+id/chBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:checked="true"
        android:text="@string/checkBoxName"

        android:textSize="24dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnClear"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:shadowColor="@color/colorAccent"
        android:text="@string/buttonClear"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSend"
        android:shadowColor="@color/colorPrimary"
        android:textSize="24dp"
        android:layout_margin="12dp"/>


</LinearLayout>